# construct

./: .gitignore  AGENTS.md  README.md  USER-TEST-PLAYBOOK-v03.md  hatch_build.py  pyproject.toml  refresh-construct.sh  setup-construct.sh
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
CONSTRUCT-CLAUDE-impl/: .mcp.json  AGENTS.md  CLAUDE.md  README.md  USER_GUIDE.md
CONSTRUCT-CLAUDE-spec/: README_FIRST.md  adr-0001-python-first-drop-openclaw.md  agent-spec-construct.md  agent-spec-curator.md  agent-spec-researcher.md  architecture-overview.md  artifact-catalog.md  config-topology.md  data-schemas.md  development-strategy.md  knowledge-card-schema.md  nfrs.md  prd-v02-cross-domain-cluster.md  prd-v02-live-views.md  prd-v03-pipeline-mvp.md  prd.md  process.md  product-brief.md  spec-v02-build-pipeline.md  spec-v02-cross-domain-data.md  spec-v02-cross-domain-graph.md  spec-v02-cross-domain-views.md  spec-v02-data-generation.md  spec-v02-data-model.md  spec-v02-design-prototype.md  spec-v02-hook-integration.md  spec-v02-knowledge-views-spike.md  spec-v02-runtime-topology.md  spec-v02-scaffold.md  spec-v02-validation.md  spec-v02-views.md  spec-v04-agentworkflows.md  spec-v05-ui-primary.md  user-journeys.md  validation-strategy.md  workspace-contract.md
CONSTRUCT-CLAUDE-v02-planning/: README.md  backlog.md  missing-claude-native-support-analysis.md
CONSTRUCT-CLAUDE-v03-planning/: README.md  artifact-catalog.md  tranche-1-mvp.md
CONSTRUCT-agent-system-spec/: README_FIRST.md  (+10 more)
(+545 files in other folders)
