[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "construct"
version = "0.1.0"
description = "Local-first, agent-powered personal knowledge system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pytest>=8.0",
  "ruamel.yaml>=0.18",
  "typer>=0.12",
]

[project.scripts]
construct = "construct.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/construct"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
